--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,6 +1,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
+
+<!--    Internet permission-->
+    <uses-permission android:name="android.permission.INTERNET"/>
+
     <application
-        android:label="ai_chatbot"
+        android:label="Ask Me"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
