--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,10 +40,14 @@ dependencies:
   dio: ^5.4.3+1
   intl: ^0.19.0
   google_generative_ai: ^0.4.0
+  animated_text_kit: ^4.2.2
+  clipboard: ^0.1.3
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+
+
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
@@ -51,6 +55,9 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
 #  flutter_lints: ^3.0.0
+#  icons_launcher: ^2.1.7
+
+
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -64,8 +71,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+    - assets/images/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
